--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "sentry/sentry-laravel": "^1.0",
         "simshaun/recurr": "^4.0",
         "spatie/browsershot": "^3.29",
+        "stripe/stripe-php": "^7.0",
         "superbalist/laravel-google-cloud-storage": "^2.2",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6",
