--- a/composer.json
+++ b/composer.json
@@ -41,18 +41,18 @@
         "jlapp/swaggervel": "master-dev",
         "jonnyw/php-phantomjs": "dev-fixes",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/legacy-encrypter": "^1.0",
         "laravel/socialite": "3.0.x-dev",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "5.4.*",
+        "laravelcollective/html": "5.5.*",
         "league/csv": "^9.1",
         "league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-rackspace": "~1.0",
         "league/fractal": "0.13.*",
         "maatwebsite/excel": "~2.0",
-        "mpdf/mpdf": "7.1.0",
-        "nesbot/carbon": "^1.25",
+        "mpdf/mpdf": "7.1.7",
+        "nesbot/carbon": "^1.26",
         "nwidart/laravel-modules": "1.*",
         "omnipay/authorizenet": "dev-solution-id as 2.5.0",
         "omnipay/firstdata": "^2.4",
@@ -105,18 +105,20 @@
         "post-install-cmd": [
             "rm bootstrap/cache/compiled.php || true",
             "php artisan view:clear",
-            "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan clear-compiled"
         ],
         "post-update-cmd": [
             "rm bootstrap/cache/compiled.php || true",
             "php artisan view:clear",
-            "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan clear-compiled"
         ],
         "post-create-project-cmd": [
             "php -r \"copy('.env.example', '.env');\"",
             "php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "minimum-stability": "dev",
