--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dropzone": "^5.5.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "jsignature": "^2.1.3",
     "laravel-mix": "^4.1.2",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "^1.14.3",
