Integrating OpenAPI documentation

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
+        "darkaonline/l5-swagger": "^6.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laravel/dusk": "^5.0",
