Add gateway transformer

--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan storage:link"
         ]
     },
     "config": {
