--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "intervention/image": "^2.4",
         "laracasts/presenter": "^0.2.1",
         "laravel/framework": "6.0.*",
+        "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "6.0.*",
