--- a/composer.json
+++ b/composer.json
@@ -1,157 +1,159 @@
 {
-    "name": "invoiceninja/invoiceninja",
-    "description": "Invoices, expenses & time-tracking built with Laravel",
-    "keywords": [
-        "invoice",
-        "laravel"
+  "name": "invoiceninja/invoiceninja",
+  "description": "Invoices, expenses & time-tracking built with Laravel",
+  "keywords": [
+    "invoice",
+    "laravel"
+  ],
+  "license": "Attribution Assurance License",
+  "authors": [
+    {
+      "name": "Hillel Coren",
+      "email": "hillelcoren@gmail.com"
+    }
+  ],
+  "require": {
+    "php": ">=7.0.0",
+    "ext-gd": "*",
+    "ext-gmp": "*",
+    "anahkiasen/former": "4.*",
+    "asgrim/ofxparser": "^1.1",
+    "bacon/bacon-qr-code": "^1.0",
+    "barracudanetworks/archivestream-php": "^1.0",
+    "barryvdh/laravel-cors": "^0.9.1",
+    "barryvdh/laravel-debugbar": "~3.0.1",
+    "barryvdh/laravel-ide-helper": "~2.2",
+    "cerdic/css-tidy": "~v1.5",
+    "chumper/datatable": "dev-add-back-options",
+    "cleverit/ubl_invoice": "1.*",
+    "codedge/laravel-selfupdater": "5.x-dev",
+    "collizo4sky/omnipay-wepay": "dev-address-fix",
+    "digitickets/omnipay-gocardlessv2": "dev-payment-fix",
+    "doctrine/dbal": "2.5.x",
+    "dompdf/dompdf": "0.6.2",
+    "ezyang/htmlpurifier": "~v4.7",
+    "fzaninotto/faker": "^1.5",
+    "google/apiclient": "^2.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "intervention/image": "dev-master",
+    "invoiceninja/omnipay-collection": "^0.10.0",
+    "jaybizzle/laravel-crawler-detect": "1.*",
+    "jlapp/swaggervel": "master-dev",
+    "jonnyw/php-phantomjs": "dev-fixes",
+    "laracasts/presenter": "dev-master",
+    "laravel/framework": "5.5.*",
+    "laravel/legacy-encrypter": "^1.0",
+    "laravel/socialite": "3.0.x-dev",
+    "laravel/tinker": "^1.0",
+    "laravelcollective/html": "5.5.*",
+    "league/csv": "^9.1",
+    "league/flysystem-aws-s3-v3": "~1.0",
+    "league/flysystem-rackspace": "~1.0",
+    "league/fractal": "0.13.*",
+    "maatwebsite/excel": "~2.0",
+    "mpdf/mpdf": "7.1.7",
+    "nesbot/carbon": "^1.26",
+    "nwidart/laravel-modules": "2.0.*",
+    "omnipay/authorizenet": "dev-solution-id as 2.5.0",
+    "omnipay/firstdata": "^2.4",
+    "omnipay/payfast": "dev-master",
+    "patricktalmadge/bootstrapper": "5.5.x",
+    "pragmarx/google2fa-laravel": "^0.1.2",
+    "predis/predis": "^1.1",
+    "roave/security-advisories": "dev-master",
+    "simshaun/recurr": "dev-master",
+    "stripe/stripe-php": "^6.40",
+    "symfony/css-selector": "~3.1",
+    "turbo124/laravel-push-notification": "2.*",
+    "webpatser/laravel-countries": "dev-master#75992ad",
+    "websight/l5-google-cloud-storage": "dev-master",
+    "wepay/php-sdk": "^0.2",
+    "wildbit/postmark-php": "^2.5",
+    "ext-curl": "*",
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "symfony/dom-crawler": "~3.1",
+    "codeception/c3": "2.*",
+    "codeception/codeception": "2.*",
+    "phpspec/phpspec": "~2.1",
+    "phpunit/phpunit": "~5.7"
+  },
+  "autoload": {
+    "classmap": [
+      "app/Console/Commands",
+      "app/Libraries",
+      "app/Http/Controllers",
+      "app/Models",
+      "app/Ninja",
+      "app/Ninja/Repositories",
+      "database"
     ],
-    "license": "Attribution Assurance License",
-    "authors": [
-        {
-            "name": "Hillel Coren",
-            "email": "hillelcoren@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=7.0.0",
-        "ext-gd": "*",
-        "ext-gmp": "*",
-        "anahkiasen/former": "4.*",
-        "asgrim/ofxparser": "^1.1",
-        "bacon/bacon-qr-code": "^1.0",
-        "barracudanetworks/archivestream-php": "^1.0",
-        "barryvdh/laravel-cors": "^0.9.1",
-        "barryvdh/laravel-debugbar": "~3.0.1",
-        "barryvdh/laravel-ide-helper": "~2.2",
-        "cerdic/css-tidy": "~v1.5",
-        "chumper/datatable": "dev-add-back-options",
-        "cleverit/ubl_invoice": "1.*",
-        "codedge/laravel-selfupdater": "5.x-dev",
-        "collizo4sky/omnipay-wepay": "dev-address-fix",
-        "digitickets/omnipay-gocardlessv2": "dev-payment-fix",
-        "doctrine/dbal": "2.5.x",
-        "dompdf/dompdf": "0.6.2",
-        "ezyang/htmlpurifier": "~v4.7",
-        "fzaninotto/faker": "^1.5",
-        "google/apiclient": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "intervention/image": "dev-master",
-        "invoiceninja/omnipay-collection": "^0.10.0",
-        "jaybizzle/laravel-crawler-detect": "1.*",
-        "jlapp/swaggervel": "master-dev",
-        "jonnyw/php-phantomjs": "dev-fixes",
-        "laracasts/presenter": "dev-master",
-        "laravel/framework": "5.5.*",
-        "laravel/legacy-encrypter": "^1.0",
-        "laravel/socialite": "3.0.x-dev",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "5.5.*",
-        "league/csv": "^9.1",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-rackspace": "~1.0",
-        "league/fractal": "0.13.*",
-        "maatwebsite/excel": "~2.0",
-        "mpdf/mpdf": "7.1.7",
-        "nesbot/carbon": "^1.26",
-        "nwidart/laravel-modules": "2.0.*",
-        "omnipay/authorizenet": "dev-solution-id as 2.5.0",
-        "omnipay/firstdata": "^2.4",
-        "omnipay/payfast": "dev-master",
-        "patricktalmadge/bootstrapper": "5.5.x",
-        "pragmarx/google2fa-laravel": "^0.1.2",
-        "predis/predis": "^1.1",
-        "roave/security-advisories": "dev-master",
-        "simshaun/recurr": "dev-master",
-        "stripe/stripe-php": "^6.40",
-        "symfony/css-selector": "~3.1",
-        "turbo124/laravel-push-notification": "2.*",
-        "webpatser/laravel-countries": "dev-master#75992ad",
-        "websight/l5-google-cloud-storage": "dev-master",
-        "wepay/php-sdk": "^0.2",
-        "wildbit/postmark-php": "^2.5"
+    "psr-4": {
+      "App\\": "app/",
+      "Modules\\": "Modules/"
     },
-    "require-dev": {
-        "symfony/dom-crawler": "~3.1",
-        "codeception/c3": "2.*",
-        "codeception/codeception": "2.*",
-        "phpspec/phpspec": "~2.1",
-        "phpunit/phpunit": "~5.7"
-    },
-    "autoload": {
-        "classmap": [
-            "app/Console/Commands",
-            "app/Libraries",
-            "app/Http/Controllers",
-            "app/Models",
-            "app/Ninja",
-            "app/Ninja/Repositories",
-            "database"
-        ],
-        "psr-4": {
-            "App\\": "app/",
-            "Modules\\": "Modules/"
-        },
-        "files": [
-            "app/Libraries/lib_autolink.php",
-            "app/Libraries/OFX.php"
-        ]
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "rm bootstrap/cache/compiled.php || true",
-            "php artisan view:clear",
-            "php artisan clear-compiled"
-        ],
-        "post-update-cmd": [
-            "rm bootstrap/cache/compiled.php || true",
-            "php artisan view:clear",
-            "php artisan clear-compiled"
-        ],
-        "post-create-project-cmd": [
-            "php -r \"copy('.env.example', '.env');\"",
-            "php artisan key:generate"
-        ],
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
-        ]
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/hillelcoren/l5-google-cloud-storage"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/hillelcoren/omnipay-wepay"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/hillelcoren/omnipay-gocardlessv2"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/hillelcoren/datatable"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/hillelcoren/php-phantomjs"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/davidbankes/omnipay-firstdata.git"
-        }
+    "files": [
+      "app/Libraries/lib_autolink.php",
+      "app/Libraries/OFX.php"
     ]
+  },
+  "autoload-dev": {
+    "classmap": [
+      "tests/TestCase.php"
+    ]
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "rm bootstrap/cache/compiled.php || true",
+      "php artisan view:clear",
+      "php artisan clear-compiled"
+    ],
+    "post-update-cmd": [
+      "rm bootstrap/cache/compiled.php || true",
+      "php artisan view:clear",
+      "php artisan clear-compiled"
+    ],
+    "post-create-project-cmd": [
+      "php -r \"copy('.env.example', '.env');\"",
+      "php artisan key:generate"
+    ],
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover"
+    ]
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/hillelcoren/l5-google-cloud-storage"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/hillelcoren/omnipay-wepay"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/hillelcoren/omnipay-gocardlessv2"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/hillelcoren/datatable"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/hillelcoren/php-phantomjs"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/davidbankes/omnipay-firstdata.git"
+    }
+  ]
 }
