--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "league/flysystem-rackspace": "~1.0",
         "league/fractal": "0.13.*",
         "maatwebsite/excel": "~2.0",
+        "mashape/unirest-php": "^3.0",
         "mpdf/mpdf": "7.1.7",
         "nesbot/carbon": "^1.26",
         "nwidart/laravel-modules": "2.0.*",
