working on custom Gmail Mail Provider

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": ">=7.3",
         "anahkiasen/former": "^4.2",
         "asgrim/ofxparser": "^1.2",
+        "dacastro4/laravel-gmail": "^3.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
