--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
         "hashids/hashids": "^3.0",
         "intervention/image": "^2.4",
         "laracasts/presenter": "^0.2.1",
-        "laravel/framework": "6.0.*",
+        "laravel/framework": "^6",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "6.0.*",
+        "laravelcollective/html": "^6",
         "league/fractal": "^0.17.0",
         "league/omnipay": "^3.0",
         "maennchen/zipstream-php": "^1.2",
