Remove comments - Added 'ext-zip' in composer.json - Fixed $credits transform

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "websight/l5-google-cloud-storage": "dev-master",
         "wepay/php-sdk": "^0.2",
         "wildbit/postmark-php": "^2.5",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-zip": "*"
     },
     "require-dev": {
         "symfony/dom-crawler": "~3.1",
