--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "laravel/dusk": "^5.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "ext-json": "*"
     },
     "autoload": {
         "classmap": [
