Export data for the migration (master) (#3239)
* Scaffold migration controller & steps

* - Basic controller scaffold
- Intro step
- Downloading data

* Import step for the v2

* Export file using account_key property

* Fix button displaying

* Client export mappings

* Company export mappings

* Add withTrashed() for clients

* Export users mappings

* Export invoices mappings

* Export company properties as array

* add withTrashed() for invoices

* Downloading the json file

* Fix 'account_id' for company export
- Code cleanup & leftovers

* Creating zip for logo & storing json as file (wip)

* Zipping & sending migration files (wip)

* Exporting & mappings for quotes

* Re-enable headers for downloading

* Mappings for tax rates

* Mappings for the products

* Fix formattings & php doc messages

* Bring back headers for downloading

* Export 'company_id', 'user_id' with clients

* Export 'id' with users resource

* Remove unused parameter

* Export mappings for payments

* Export 'line_items' with invoices

* Export credits & export client id

* Export 'credits' within main JSON

* Mappings for line_items

* Fix 'is_amount_discount' for invoice export

* Exporting migration file as .zip archive

* Improve settings card for migration

* Removed duplicated keys in texts.php for en

* Fix formatting in en/texts.php

* Integrate the migration part with rest of UI

* Export company as object, not array

* Clean up

* Fixes for V1

* Apply formatting

* Remove comments
- Added 'ext-zip' in composer.json
- Fixed $credits transform

* Remove unused params

Co-authored-by: David Bomba <turbo124@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,9 @@
         "webpatser/laravel-countries": "dev-master#75992ad",
         "websight/l5-google-cloud-storage": "dev-master",
         "wepay/php-sdk": "^0.2",
-        "wildbit/postmark-php": "^2.5"
+        "wildbit/postmark-php": "^2.5",
+        "ext-json": "*",
+        "ext-zip": "*"
     },
     "require-dev": {
         "symfony/dom-crawler": "~3.1",
