--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ group: deprecated-2017Q4
 
 php:
   - 7.3
-#  - 7.4
+  - 7.4
 #  - nightly
 
 addons:
@@ -77,7 +77,7 @@ before_script:
 
 script:
   - php ./vendor/bin/phpunit --debug --verbose --coverage-clover=coverage.xml
-  - php artisan dusk
+  #- php artisan dusk
   #- npm test
 after_success:
     - bash <(curl -s https://codecov.io/bash)
