(WIP) Response refactor: - Catching exceptions at top level - Tests refactor

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6",
         "yajra/laravel-datatables-html": "^4.0",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "ext-json": "*",
