Ensure NINJA_ENVIRONMENT variable is present  in .env file

--- a/.env.example
+++ b/.env.example
@@ -40,9 +40,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-MULTI_DB_ENABLED=true
 POSTMARK_API_TOKEN=
 
 GOOGLE_MAPS_API_KEY=
 API_SECRET=superdoopersecrethere
 ERROR_EMAIL=
+
+NINJA_ENVIRONMENT=selfhost
