--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
     "type": "project",
     "require": {
         "php": ">=7.3",
+        "ext-json": "*",
         "anahkiasen/former": "^4.2",
         "asgrim/ofxparser": "^1.2",
         "codedge/laravel-selfupdater": "2.5.1",
+        "composer/composer": "^1.10",
         "dacastro4/laravel-gmail": "^3.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
@@ -49,8 +51,7 @@
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6",
         "yajra/laravel-datatables-html": "^4.0",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "ext-json": "*"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "ext-json": "*",
