--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "devDependencies": {},
-  "dependencies": {
-    "@coreui/coreui": "^2.1.12",
-    "@coreui/icons": "^0.3.0",
-    "@ttskch/select2-bootstrap4-theme": "^1.2.3",
-    "bootstrap": "^4.3.1",
-    "bootstrap-sweetalert": "^1.0.1",
-    "cross-env": "^5.2.0",
-    "dropzone": "^5.5.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "jsignature": "^2.1.3",
-    "laravel-mix": "^4.1.2",
-    "perfect-scrollbar": "^1.3.0",
-    "popper.js": "^1.14.3",
-    "puppeteer": "^1.20.0",
-    "select2": "^4.0.8"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {},
+    "dependencies": {
+        "axios": "^0.19",
+        "cross-env": "^7.0",
+        "laravel-mix": "^5.0.1",
+        "lodash": "^4.17.13",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
+        "jsignature": "^2.1.3",
+        "puppeteer": "^1.20.0"
+    }
 }
