Tailwind & templates cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ public/mix-manifest.json
 
 # Ignore local migrations
 storage/migrations
+
+# Ignore Tailwind & Javascript build file >2mb without PurgeCSS (development-only)
+public/css/app.css
+public/js/app.js
