--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "vue-template-compiler": "^2.6.11"
+    },
     "dependencies": {
+        "@tailwindcss/ui": "^0.1.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "jsignature": "^2.1.3",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "puppeteer": "^1.20.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "jsignature": "^2.1.3",
-        "puppeteer": "^1.20.0"
+        "tailwindcss": "^1.2.0"
     }
 }
