--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS='user@example.com'
+MAIL_FROM_NAME='Self Hosted User'
 
 POSTMARK_API_TOKEN=
 
@@ -47,3 +49,4 @@ API_SECRET=superdoopersecrethere
 ERROR_EMAIL=
 
 NINJA_ENVIRONMENT=selfhost
+HASH_SALT=
