Payments - $this->render is now proxy for render() - Removed logic from Controller.php to ClientPortal.php - Added MakesDates to ClientGatewayToken.php - StripePaymentDriver.php now returns correct views - Refactor of adding new payment method - Ignoring all local builds for public/js/clients/*

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ storage/migrations
 # Ignore Tailwind & Javascript build file >2mb without PurgeCSS (development-only)
 public/css/app.css
 public/js/app.js
+public/js/clients/*
