--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
         "dacastro4/laravel-gmail": "^3.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
+        "fzaninotto/faker": "^1.4",
         "google/apiclient": "^2.0",
         "hashids/hashids": "^3.0",
         "intervention/image": "^2.4",
         "laracasts/presenter": "^0.2.1",
         "laravel/framework": "^6",
+        "laravel/horizon": "3.7.2",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
@@ -46,8 +48,7 @@
         "staudenmeir/eloquent-has-many-deep": "^1.11",
         "stripe/stripe-php": "^7.0",
         "superbalist/laravel-google-cloud-storage": "^2.2",
-        "webpatser/laravel-countries": "dev-master#75992ad",
-        "fzaninotto/faker": "^1.4"
+        "webpatser/laravel-countries": "dev-master#75992ad"
     },
     "require-dev": {
         "laravelcollective/html": "^6",
