--- a/.env.ci
+++ b/.env.ci
@@ -6,10 +6,9 @@ APP_URL=http://ninja.test
 DB_CONNECTION=db-ninja-01
 MULTI_DB_ENABLED=false
 # database
-DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=db-ninja-01
+DB_DATABASE=ninja
 DB_USERNAME=ninja
 DB_PASSWORD=ninja
 NINJA_ENVIRONMENT=selfhost
