--- a/.env.ci
+++ b/.env.ci
@@ -9,6 +9,6 @@ MULTI_DB_ENABLED=false
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ninja
-DB_USERNAME=ninja
+DB_USERNAME=root
 DB_PASSWORD=ninja
 NINJA_ENVIRONMENT=selfhost
