--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="Invoice Ninja"
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 
 APP_URL=http://localhost
 
@@ -25,7 +25,7 @@ DEMO_MODE=false
 BROADCAST_DRIVER=log
 LOG_CHANNEL=stack
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -49,4 +49,9 @@ API_SECRET=superdoopersecrethere
 ERROR_EMAIL=
 
 NINJA_ENVIRONMENT=selfhost
-HASH_SALT=
+
+SELF_UPDATER_REPO_VENDOR = invoiceninja
+SELF_UPDATER_REPO_NAME = invoiceninja
+SELF_UPDATER_USE_BRANCH = v2
+SELF_UPDATER_MAILTO_ADDRESS = user@example.com
+SELF_UPDATER_MAILTO_NAME = "John Doe"
