--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Install composer dependencies
       run: |
+        composer config -g github-oauth.github.com ${{ secrets.GITHUB_TOKEN }}
         composer install
 
     - name: Prepare Laravel Application
