--- a/.env.ci
+++ b/.env.ci
@@ -3,12 +3,12 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://ninja.test
-DB_CONNECTION=db-ninja-01
+DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 MULTI_DB_ENABLED=false
 # database
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=ninja
 DB_USERNAME=root
 DB_PASSWORD=ninja
 NINJA_ENVIRONMENT=selfhost
