--- a/.env.ci
+++ b/.env.ci
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://ninja.test
-DB_CONNECTION=sqlite
-DB_DATABASE=database/database.sqlite
+DB_CONNECTION=db-ninja-01
+DB_DATABASE=ninja
 MULTI_DB_ENABLED=false
 # database
 DB_HOST=mysql
