--- a/.env.ci
+++ b/.env.ci
@@ -4,11 +4,11 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://ninja.test
 DB_CONNECTION=db-ninja-01
-DB_DATABASE=ninja
+DB_DATABASE1=ninja
 MULTI_DB_ENABLED=false
 # database
-DB_HOST=mysql
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=ninja
+DB_HOST1=localhost
+DB_PORT1=3306
+DB_USERNAME1=root
+DB_PASSWORD1=ninja
 NINJA_ENVIRONMENT=selfhost
