--- a/.env.ci
+++ b/.env.ci
@@ -12,3 +12,4 @@ DB_PORT1=3306
 DB_USERNAME1=root
 DB_PASSWORD1=ninja
 NINJA_ENVIRONMENT=selfhost
+COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
