--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,10 @@ jobs:
         with:
           ref: v2
           
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Install dependencies
-        run: composer install --prefer-dist
+      - name: Install composer dependencies
+        run: |
+          composer config -g github-oauth.github.com ${{ secrets.GITHUB_TOKEN }}
+          composer install
       
       - name: Prepare Laravel Application
         run: |
