--- a/.env.ci
+++ b/.env.ci
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://ninja.test
 MULTI_DB_ENABLED=false
 # database
-DB_CONNECTION=db-ninja-01
+DB_CONNECTION=mysql
 DB_HOST1=127.0.0.1
 DB_DATABASE1=ninja
 DB_USERNAME1=root
