--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,5 @@ SELF_UPDATER_REPO_NAME = invoiceninja
 SELF_UPDATER_USE_BRANCH = v2
 SELF_UPDATER_MAILTO_ADDRESS = user@example.com
 SELF_UPDATER_MAILTO_NAME = "John Doe"
+COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
+
