--- a/.env.ci
+++ b/.env.ci
@@ -5,12 +5,10 @@ APP_DEBUG=true
 APP_URL=http://ninja.test
 MULTI_DB_ENABLED=false
 # database
-DB_CONNECTION=mysql
-DB_HOST1=127.0.0.1
-DB_DATABASE1=ninja
-DB_USERNAME1=root
-DB_PASSWORD1=ninja
-DB_PORT1=3306
+DB_CONNECTION=db-ninja-01
+DB_DATABASE=ninja
+DB_USERNAME=root
+DB_PASSWORD=ninja
 
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
