--- a/.env.ci
+++ b/.env.ci
@@ -3,13 +3,12 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://ninja.test
-DB_CONNECTION=db-ninja-01
-DB_DATABASE1=ninja
 MULTI_DB_ENABLED=false
 # database
-DB_HOST1=localhost
-DB_PORT1=3306
-DB_USERNAME1=root
-DB_PASSWORD1=ninja
+DB_CONNECTION=db-ninja-01
+DB_DATABASE=ninja
+DB_USERNAME=root
+DB_PASSWORD=ninja
+
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
