--- a/.env.ci
+++ b/.env.ci
@@ -6,9 +6,9 @@ APP_URL=http://ninja.test
 MULTI_DB_ENABLED=false
 # database
 DB_CONNECTION=db-ninja-01
-DB_DATABASE=ninja
-DB_USERNAME=root
-DB_PASSWORD=ninja
+DB_DATABASE1=ninja
+DB_USERNAME1=root
+DB_PASSWORD1=ninja
 
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
