--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -11,6 +11,7 @@ jobs:
       DB_DATABASE1: ninja
       DB_USERNAME1: root
       DB_PASSWORD1: ninja
+      DB_HOST1: 127.0.0.1
       BROADCAST_DRIVER: log
       CACHE_DRIVER: file
       QUEUE_CONNECTION: sync
