--- a/.env.ci
+++ b/.env.ci
@@ -9,6 +9,6 @@ DB_CONNECTION=db-ninja-01
 DB_DATABASE1=ninja
 DB_USERNAME1=root
 DB_PASSWORD1=ninja
-
+DB_HOST1=127.0.0.1
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
