--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,15 +18,16 @@ jobs:
       SESSION_DRIVER: file
   
     services:
-      mysql:
-        image: mysql:5.7
+      mariadb:
+        image: mariadb:latest
+        ports:
+          - 3306
         env:
           MYSQL_USER: ninja
-          MYSQL_ROOT_PASSWORD: ninja
+          MYSQL_PASSWORD: ninja
           MYSQL_DATABASE: ninja
-        ports:
-          - 33306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+          MYSQL_ROOT_PASSWORD: ninja
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
         
     steps:
     - name: Start mysql service
