--- a/.env.ci
+++ b/.env.ci
@@ -10,5 +10,9 @@ DB_DATABASE1=ninja
 DB_USERNAME1=ninja
 DB_PASSWORD1=ninja
 DB_HOST1=127.0.0.1
+DB_DATABASE=ninja
+DB_USERNAME=ninja
+DB_PASSWORD=ninja
+DB_HOST=127.0.0.1
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
