--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DB_DATABASE1: ninja
-      DB_USERNAME1: ninja
+      DB_USERNAME1: root
       DB_PASSWORD1: ninja
       DB_HOST1: 127.0.0.1
       DB_DATABASE: ninja
-      DB_USERNAME: ninja
+      DB_USERNAME: root
       DB_PASSWORD: ninja
       DB_HOST: 127.0.0.1  
       BROADCAST_DRIVER: log
