--- a/.env.ci
+++ b/.env.ci
@@ -5,14 +5,7 @@ APP_DEBUG=true
 APP_URL=http://ninja.test
 MULTI_DB_ENABLED=false
 # database
-DB_CONNECTION=db-ninja-01
-DB_DATABASE1=ninja
-DB_USERNAME1=root
-DB_PASSWORD1=ninja
-DB_HOST1=127.0.0.1
-DB_DATABASE=ninja
-DB_USERNAME=root
-DB_PASSWORD=ninja
-DB_HOST=127.0.0.1
+DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
