--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -8,20 +8,8 @@ jobs:
   phpunit:
     runs-on: ubuntu-latest
     env:
-      DB_DATABASE1: ninja
-      DB_USERNAME1: root
-      DB_PASSWORD1: ninja
-      DB_HOST1: 127.0.0.1
-      DB_PORT1: ${{ job.services.mysql.ports[3306] }}
-      DB_PORT: ${{ job.services.mysql.ports[3306] }}
-      DB_DATABASE: ninja
-      DB_USERNAME: root
-      DB_PASSWORD: ninja
-      DB_HOST: 127.0.0.1  
-      BROADCAST_DRIVER: log
-      CACHE_DRIVER: file
-      QUEUE_CONNECTION: sync
-      SESSION_DRIVER: file
+      DB_CONNECTION=sqlite
+      DB_DATABASE=database/database.sqlite
   
     services:
       mariadb:
