Fixes for github actions

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -8,8 +8,8 @@ jobs:
   phpunit:
     runs-on: ubuntu-latest
     env:
-      DB_CONNECTION=sqlite
-      DB_DATABASE=database/database.sqlite
+    DB_CONNECTION: sqlite
+    DB_DATABASE: database/database.sqlite
   
     services:
       mariadb:
