--- a/.env.ci
+++ b/.env.ci
@@ -8,11 +8,11 @@ MULTI_DB_ENABLED=false
 DB_CONNECTION=db-ninja-01
 DB_DATABASE1=ninja
 DB_USERNAME1=root
-DB_PASSWORD1=ninja
+DB_PASSWORD1=
 DB_HOST1='127.0.0.1'
 DB_DATABASE=ninja
 DB_USERNAME=root
-DB_PASSWORD=ninja
+DB_PASSWORD=
 DB_HOST='127.0.0.1'
 NINJA_ENVIRONMENT=selfhost
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
