--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -10,11 +10,11 @@ jobs:
     env:
       DB_DATABASE1: ninja
       DB_USERNAME1: root
-      DB_PASSWORD1: ''
+      DB_PASSWORD1: ninja
       DB_HOST1: '127.0.0.1'
       DB_DATABASE: ninja
       DB_USERNAME: root
-      DB_PASSWORD: ''
+      DB_PASSWORD: ninja
       DB_HOST: '127.0.0.1'  
       BROADCAST_DRIVER: log
       CACHE_DRIVER: file
@@ -31,7 +31,7 @@ jobs:
           MYSQL_USER: ninja
           MYSQL_PASSWORD: ninja
           MYSQL_DATABASE: ninja
-          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_ROOT_PASSWORD: ninja
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
         
     steps:
@@ -41,9 +41,11 @@ jobs:
     
     - name: Verify MariaDB connection
       env:
-        PORT: ${{ job.services.mariadb.ports[3306] }}
+        DB_PORT: ${{ job.services.mariadb.ports[3306] }}
+        DB_PORT1: ${{ job.services.mariadb.ports[3306] }}
+
       run: |
-        while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+        while ! mysqladmin ping -h"127.0.0.1" -P"$DB_PORT" --silent; do
           sleep 1
         done
     
