--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -87,7 +87,9 @@ jobs:
         npm run production
         
     - name: Run Testsuite
-      run: vendor/bin/phpunit --testdox
+      run: |
+        cat .env
+        vendor/bin/phpunit --testdox
       env:
         DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
