Fixes for Invoice Designs (#3559)
* fixes for tests

* Working on Invoice Designs

* Update phpunit.yml

* Update phpunit.yml

* Working on sending an individual email

* Update phpunit.yml

* Fixes for designs

* Update phpunit.yml

* Working on sending entity email - individual

* Fixes for account creation

* Remove Laravel Horizon

* remove logging

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,6 +20,8 @@ jobs:
       CACHE_DRIVER: file
       QUEUE_CONNECTION: sync
       SESSION_DRIVER: file
+      NINJA_ENVIRONMENT: development
+      MULTI_DB_ENABLED: false
   
     services:
       mariadb:
@@ -69,7 +71,7 @@ jobs:
         php artisan optimize
         php artisan cache:clear
         php artisan config:cache
-
+        
     - name: Create DB and schemas
       run: |
         mkdir -p database
@@ -85,7 +87,9 @@ jobs:
         npm run production
         
     - name: Run Testsuite
-      run: vendor/bin/phpunit --testdox
+      run: |
+        cat .env
+        vendor/bin/phpunit --testdox
       env:
         DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
