Fixes for tests

--- a/.env.ci
+++ b/.env.ci
@@ -18,3 +18,4 @@ DB_PASSWORD=ninja
 DB_HOST=127.0.0.1
 NINJA_ENVIRONMENT=development
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
+TRAVIS=true
