Remove \Log::, fixes for tests, and fixes for migration

--- a/.env.example
+++ b/.env.example
@@ -56,4 +56,4 @@ SELF_UPDATER_USE_BRANCH = v2
 SELF_UPDATER_MAILTO_ADDRESS = user@example.com
 SELF_UPDATER_MAILTO_NAME = "John Doe"
 COMPOSER_AUTH='{"github-oauth": {"github.com": "${{ secrets.GITHUB_TOKEN }}"}}'
-
+SENTRY_LARAVEL_DSN=https://cc7e8e2c678041689e53e409b7dba236@sentry.invoicing.co/5
