--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           npm i
           npm run production
+          rm -rf nodule_modules
           
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
