Remove: yajra/laravel-datatables-html
- yajra/laravel-datatables-oracle as main non-dev dependency

--- a/composer.json
+++ b/composer.json
@@ -47,14 +47,13 @@
         "staudenmeir/eloquent-has-many-deep": "^1.11",
         "stripe/stripe-php": "^7.0",
         "superbalist/laravel-google-cloud-storage": "^2.2",
-        "webpatser/laravel-countries": "dev-master#75992ad"
+        "webpatser/laravel-countries": "dev-master#75992ad",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "laravelcollective/html": "^6",
         "wildbit/postmark-php": "^2.6",
-        "yajra/laravel-datatables-html": "^4.0",
         "anahkiasen/former": "^4.2",
-        "yajra/laravel-datatables-oracle": "~9.0",
         "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "darkaonline/l5-swagger": "^6.0",
