--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "staudenmeir/eloquent-has-many-deep": "^1.11",
         "stripe/stripe-php": "^7.0",
         "superbalist/laravel-google-cloud-storage": "^2.2",
-        "webpatser/laravel-countries": "dev-master#75992ad"
+        "webpatser/laravel-countries": "dev-master#75992ad",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "laravelcollective/html": "^6",
