--- a/.env.travis
+++ b/.env.travis
@@ -21,3 +21,4 @@ TEST_USERNAME=user@example.com
 TEST_PERMISSIONS_USERNAME=permissions@example.com
 
 MULTI_DB_ENABLED=true
+NINJA_ENVIRONMENT=development
