--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.0",
         "laravel/tinker": "^1.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "league/flysystem-cached-adapter": "~1.0",
         "league/fractal": "^0.17.0",
         "league/omnipay": "^3.0",
         "maennchen/zipstream-php": "^1.2",
