--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": ">=7.3",
         "ext-json": "*",
         "asgrim/ofxparser": "^1.2",
+        "ashallendesign/laravel-exchange-rates": "^2.1",
         "cleverit/ubl_invoice": "^1.3",
         "codedge/laravel-selfupdater": "2.5.1",
         "composer/composer": "^1.10",
