Client portal improvements (1/2)
- Fix for building dependencies
- Fixes for data table sorting
- Improved styling of tables
- Improved buttons padding, position

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/compat-data": "7.9.0",
         "laravel-mix-purgecss": "^5.0.0-rc.1",
         "vue-template-compiler": "^2.6.11"
     },
